# apigateway-proxy

./: handler.py  package-lock.json  pyproject.toml  serverless.yml
.devcontainer/: devcontainer.json
