[tool.poetry]
name = "func-bicscan-api-proxy"
version = "0.1.0"
description = ""
authors = ["Ben <ben@ahnlab.io>"]
readme = "README.md"
packages = [{include = "func_bicscan_api_proxy"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
